--- a/bedankt.html
+++ b/bedankt.html
@@ -19,7 +19,7 @@
 
   <div class="qr card">
     <p>Scan deze QR-code voor de ophaalinstructies:</p>
-    <!-- Pas deze URL aan naar: https://<jouw-gebruikersnaam>.github.io/<repo-naam>/ophalen.html -->
+    <!-- Pas deze URL aan naar: https://<rebergenben-gif>.github.io/<repo-senzu>/ophalen.html -->
     <img src="https://chart.googleapis.com/chart?cht=qr&chs=240x240&chl=https://jouw-gebruikersnaam.github.io/verkoopsite/ophalen.html" alt="QR Code naar ophalen">
   </div>
 
